--- a/users.html
+++ b/users.html
@@ -7,15 +7,48 @@
 <style>
 body {
   font-family: Arial, sans-serif;
-  background: #f4f4f4;
+  background: linear-gradient(to right, #f4f4f4, #e9f1ff);
 }
 
-form {
-  width: 500px;
-  margin: 30px auto;
+.container {
+  max-width: 900px;
+  margin: 40px auto;
   background: white;
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.row {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.box {
+  flex: 1;
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 8px;
+}
+
+.origin {
+  background: #e9f1ff;
+  border-left: 6px solid #007bff;
+}
+
+.destination {
+  background: #eaffea;
+  border-left: 6px solid #28a745;
+}
+
+.box h3 {
+  margin-top: 0;
+  text-align: center;
 }
 
 label {
@@ -24,120 +57,151 @@ label {
   font-weight: bold;
 }
 
-input, select, button {
+input, select {
   width: 100%;
   padding: 8px;
   margin-top: 5px;
 }
 
-button {
+.center {
+  text-align: center;
   margin-top: 20px;
+}
+
+button {
+  padding: 12px 40px;
+  font-size: 16px;
   background: #007bff;
   color: white;
   border: none;
+  border-radius: 30px;
   cursor: pointer;
+}
+
+button:hover {
+  background: #0056b3;
 }
 </style>
 </head>
 
 <body>
 
-<h2 style="text-align:center;">📦 Nouveau transfert</h2>
+<div class="container">
+<h2>📦 Nouveau transfert</h2>
 
 <form id="transferForm">
 
-  <!-- EXPÉDITEUR -->
-  <label>Prénom expéditeur</label>
-  <input type="text" name="senderFirstName" required>
+  <div class="row">
+    <!-- ORIGINE -->
+    <div class="box origin">
+      <h3>📤 Origine</h3>
 
-  <label>Nom expéditeur</label>
-  <input type="text" name="senderLastName" required>
+      <label>Prénom expéditeur</label>
+      <input type="text" name="senderFirstName" required>
 
-  <label>Téléphone expéditeur</label>
-  <input type="text" name="senderPhone" required>
+      <label>Nom expéditeur</label>
+      <input type="text" name="senderLastName" required>
 
-  <!-- ORIGINE (LISTE DÉROULANTE) -->
-  <label>Lieu de départ</label>
-  <select name="originLocation" required>
-    <option value="">-- Sélectionner --</option>
-    <option value="Conakry">Conakry</option>
-    <option value="Labé">Labé</option>
-    <option value="France">France</option>
-    <option value="Belgique">Belgique</option>
-    <option value="New York">New York</option>
-    <option value="Atlanta">Atlanta</option>
-    <option value="Allemagne">Allemagne</option>
-    <option value="Dubaï">Dubaï</option>
-    <option value="Chine">Chine</option>
-  </select>
+      <label>Téléphone</label>
+      <input type="text" name="senderPhone" required>
 
-  <label>Montant envoyé</label>
-  <input type="number" name="amount" required>
+      <label>Lieu de départ</label>
+      <select name="originLocation" required>
+        <option value="">-- Sélectionner --</option>
+        <option>Conakry</option>
+        <option>Labé</option>
+        <option>France</option>
+        <option>Belgique</option>
+        <option>New York</option>
+        <option>Atlanta</option>
+        <option>Allemagne</option>
+        <option>Dubaï</option>
+        <option>Chine</option>
+      </select>
+    </div>
 
-  <label>Frais</label>
-  <input type="number" name="fees" required>
+    <!-- DESTINATION -->
+    <div class="box destination">
+      <h3>📥 Destination</h3>
 
-  <label>Pourcentage frais</label>
-  <input type="number" name="feePercent" required>
+      <label>Prénom destinataire</label>
+      <input type="text" name="receiverFirstName" required>
 
-  <!-- DESTINATAIRE -->
-  <label>Prénom destinataire</label>
-  <input type="text" name="receiverFirstName" required>
+      <label>Nom destinataire</label>
+      <input type="text" name="receiverLastName" required>
 
-  <label>Nom destinataire</label>
-  <input type="text" name="receiverLastName" required>
+      <label>Téléphone</label>
+      <input type="text" name="receiverPhone" required>
 
-  <label>Téléphone destinataire</label>
-  <input type="text" name="receiverPhone" required>
+      <label>Lieu de destination</label>
+      <select name="destinationLocation" required>
+        <option value="">-- Sélectionner --</option>
+        <option>Conakry</option>
+        <option>Labé</option>
+        <option>France</option>
+        <option>Belgique</option>
+        <option>New York</option>
+        <option>Atlanta</option>
+        <option>Allemagne</option>
+        <option>Dubaï</option>
+        <option>Chine</option>
+      </select>
+    </div>
+  </div>
 
-  <!-- DESTINATION (LISTE DÉROULANTE) -->
-  <label>Lieu de destination</label>
-  <select name="destinationLocation" required>
-    <option value="">-- Sélectionner --</option>
-    <option value="Conakry">Conakry</option>
-    <option value="Labé">Labé</option>
-    <option value="France">France</option>
-    <option value="Belgique">Belgique</option>
-    <option value="New York">New York</option>
-    <option value="Atlanta">Atlanta</option>
-    <option value="Allemagne">Allemagne</option>
-    <option value="Dubaï">Dubaï</option>
-    <option value="Chine">Chine</option>
-  </select>
+  <!-- TRANSACTION -->
+  <div class="row">
+    <div class="box" style="background:#fff3cd;border-left:6px solid #ffc107;">
+      <h3 style="text-align:center;">💰 Transaction</h3>
 
-  <label>Montant reçu</label>
-  <input type="number" name="recoveryAmount" required>
+      <label>Montant envoyé</label>
+      <input type="number" name="amount" required>
 
-  <label>Mode de récupération</label>
-  <select name="recoveryMode" required>
-    <option value="">-- Sélectionner --</option>
-    <option value="Cash">Cash</option>
-    <option value="Mobile Money">Mobile Money</option>
-    <option value="Virement bancaire">Virement bancaire</option>
-  </select>
+      <label>Frais</label>
+      <input type="number" name="fees" required>
 
-  <label>Mot de passe</label>
-  <input type="password" name="password" required>
+      <label>Pourcentage frais</label>
+      <input type="number" name="feePercent" required>
 
-  <button type="submit">💾 Enregistrer</button>
+      <label>Montant reçu</label>
+      <input type="number" name="recoveryAmount" required>
+
+      <label>Mode de récupération</label>
+      <select name="recoveryMode" required>
+        <option value="">-- Sélectionner --</option>
+        <option>Cash</option>
+        <option>Mobile Money</option>
+        <option>Virement bancaire</option>
+      </select>
+
+      <label>Mot de passe</label>
+      <input type="password" name="password" required>
+    </div>
+  </div>
+
+  <div class="center">
+    <button type="submit">💾 Enregistrer le transfert</button>
+  </div>
+
 </form>
+</div>
 
 <script>
 document.getElementById('transferForm').addEventListener('submit', async (e) => {
   e.preventDefault();
-
-  const formData = Object.fromEntries(new FormData(e.target));
+  const data = Object.fromEntries(new FormData(e.target));
 
   const res = await fetch('/users', {
     method: 'POST',
     headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(formData)
+    body: JSON.stringify(data)
   });
 
-  const data = await res.json();
-  alert(data.message || 'Transfert enregistré');
+  const result = await res.json();
+  alert(result.message || 'Transfert enregistré');
 });
 </script>
 
 </body>
 </html>
+ 
