Add /users/html route

--- a/users.html
+++ b/users.html
@@ -145,7 +145,7 @@ document.getElementById('transferForm').addEventListener('submit', async (e) => 
   const data = Object.fromEntries(formData.entries());
 
   try {
-    const res = await fetch('http://localhost:3000/users', {
+    const res = await fetch('https://monapi-bf4o.onrender.com/users', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify(data)
