--- a/users.html
+++ b/users.html
@@ -34,7 +34,7 @@ form {
 }
 
 .dest {
-  background: #eaffea;
+  background: #ffdede;
 }
 
 h3, h4 {
@@ -71,52 +71,52 @@ button {
 
 <div class="container">
 
-<div class="box origin">
-<h4>📤 Origine</h4>
-<input id="senderFirstName" placeholder="Prénom expéditeur" required>
-<input id="senderLastName" placeholder="Nom expéditeur" required>
-<input id="senderPhone" placeholder="Téléphone expéditeur" required>
+  <div class="box origin">
+    <h4>📤 Origine</h4>
+    <input id="senderFirstName" placeholder="Prénom expéditeur" required>
+    <input id="senderLastName" placeholder="Nom expéditeur" required>
+    <input id="senderPhone" placeholder="Téléphone expéditeur" required>
 
-<select id="originLocation" required>
-<option value="">Pays / Ville de départ</option>
-<option>Conakry</option>
-<option>Labé</option>
-<option>France</option>
-<option>Belgique</option>
-<option>New York</option>
-<option>Atlanta</option>
-<option>Allemagne</option>
-<option>Dubaï</option>
-<option>Chine</option>
-</select>
+    <select id="originLocation" required>
+      <option value="">Pays / Ville de départ</option>
+      <option>Conakry</option>
+      <option>Labé</option>
+      <option>France</option>
+      <option>Belgique</option>
+      <option>New York</option>
+      <option>Atlanta</option>
+      <option>Allemagne</option>
+      <option>Dubaï</option>
+      <option>Chine</option>
+    </select>
 
-<input id="amount" type="number" placeholder="Montant">
-<input id="fees" type="number" placeholder="Frais">
-<input id="feePercent" type="number" placeholder="% Frais">
-</div>
+    <input id="amount" type="number" placeholder="Montant" required>
+    <input id="fees" type="number" placeholder="Frais" required>
+    <input id="feePercent" type="number" placeholder="% Frais" required>
+  </div>
 
-<div class="box dest">
-<h4>📥 Destination</h4>
-<input id="receiverFirstName" placeholder="Prénom destinataire" required>
-<input id="receiverLastName" placeholder="Nom destinataire" required>
-<input id="receiverPhone" placeholder="Téléphone destinataire" required>
+  <div class="box dest">
+    <h4>📥 Destination</h4>
+    <input id="receiverFirstName" placeholder="Prénom destinataire" required>
+    <input id="receiverLastName" placeholder="Nom destinataire" required>
+    <input id="receiverPhone" placeholder="Téléphone destinataire" required>
 
-<select id="destinationLocation" required>
-<option value="">Pays / Ville destination</option>
-<option>Conakry</option>
-<option>Labé</option>
-<option>France</option>
-<option>Belgique</option>
-<option>New York</option>
-<option>Atlanta</option>
-<option>Allemagne</option>
-<option>Dubaï</option>
-<option>Chine</option>
-</select>
+    <select id="destinationLocation" required>
+      <option value="">Pays / Ville destination</option>
+      <option>Conakry</option>
+      <option>Labé</option>
+      <option>France</option>
+      <option>Belgique</option>
+      <option>New York</option>
+      <option>Atlanta</option>
+      <option>Allemagne</option>
+      <option>Dubaï</option>
+      <option>Chine</option>
+    </select>
 
-<input id="recoveryAmount" type="number" placeholder="Montant reçu">
-<input id="recoveryMode" placeholder="Mode de récupération">
-</div>
+    <input id="recoveryAmount" type="number" placeholder="Montant reçu" required>
+    <input id="recoveryMode" placeholder="Mode de récupération" required>
+  </div>
 
 </div>
 
@@ -131,21 +131,23 @@ document.getElementById('form').addEventListener('submit', async e => {
   e.preventDefault();
 
   const payload = {
-    senderFirstName: senderFirstName.value,
-    senderLastName: senderLastName.value,
-    senderPhone: senderPhone.value,
-    originLocation: originLocation.value,
-    amount: Number(amount.value),
-    fees: Number(fees.value),
-    feePercent: Number(feePercent.value),
-    receiverFirstName: receiverFirstName.value,
-    receiverLastName: receiverLastName.value,
-    receiverPhone: receiverPhone.value,
-    destinationLocation: destinationLocation.value,
-    recoveryAmount: Number(recoveryAmount.value),
-    recoveryMode: recoveryMode.value,
-    password: password.value
+    senderFirstName: document.getElementById('senderFirstName').value,
+    senderLastName: document.getElementById('senderLastName').value,
+    senderPhone: document.getElementById('senderPhone').value,
+    originLocation: document.getElementById('originLocation').value,
+    amount: Number(document.getElementById('amount').value),
+    fees: Number(document.getElementById('fees').value),
+    feePercent: Number(document.getElementById('feePercent').value),
+    receiverFirstName: document.getElementById('receiverFirstName').value,
+    receiverLastName: document.getElementById('receiverLastName').value,
+    receiverPhone: document.getElementById('receiverPhone').value,
+    destinationLocation: document.getElementById('destinationLocation').value,
+    recoveryAmount: Number(document.getElementById('recoveryAmount').value),
+    recoveryMode: document.getElementById('recoveryMode').value,
+    password: document.getElementById('password').value
   };
+
+  const message = document.getElementById('message');
 
   try {
     const res = await fetch('/users', {
@@ -158,7 +160,9 @@ document.getElementById('form').addEventListener('submit', async e => {
     message.innerText = data.message || 'Succès';
 
     if (res.ok) document.getElementById('form').reset();
+
   } catch (err) {
+    console.error(err);
     message.innerText = 'Erreur serveur';
   }
 });
