--- a/users.html
+++ b/users.html
@@ -45,6 +45,7 @@ input, select, button {
   width: 100%;
   padding: 8px;
   margin-top: 10px;
+  box-sizing: border-box;
 }
 
 button {
@@ -76,7 +77,7 @@ button {
     <input id="senderFirstName" placeholder="Prénom expéditeur" required>
     <input id="senderLastName" placeholder="Nom expéditeur" required>
     <input id="senderPhone" placeholder="Téléphone expéditeur" required>
-
+    
     <select id="originLocation" required>
       <option value="">Pays / Ville de départ</option>
       <option>Conakry</option>
@@ -131,23 +132,23 @@ document.getElementById('form').addEventListener('submit', async e => {
   e.preventDefault();
 
   const payload = {
-    senderFirstName: document.getElementById('senderFirstName').value,
-    senderLastName: document.getElementById('senderLastName').value,
-    senderPhone: document.getElementById('senderPhone').value,
+    senderFirstName: document.getElementById('senderFirstName').value.trim(),
+    senderLastName: document.getElementById('senderLastName').value.trim(),
+    senderPhone: document.getElementById('senderPhone').value.trim(),
     originLocation: document.getElementById('originLocation').value,
     amount: Number(document.getElementById('amount').value),
     fees: Number(document.getElementById('fees').value),
     feePercent: Number(document.getElementById('feePercent').value),
-    receiverFirstName: document.getElementById('receiverFirstName').value,
-    receiverLastName: document.getElementById('receiverLastName').value,
-    receiverPhone: document.getElementById('receiverPhone').value,
+    receiverFirstName: document.getElementById('receiverFirstName').value.trim(),
+    receiverLastName: document.getElementById('receiverLastName').value.trim(),
+    receiverPhone: document.getElementById('receiverPhone').value.trim(),
     destinationLocation: document.getElementById('destinationLocation').value,
     recoveryAmount: Number(document.getElementById('recoveryAmount').value),
-    recoveryMode: document.getElementById('recoveryMode').value,
+    recoveryMode: document.getElementById('recoveryMode').value.trim(),
     password: document.getElementById('password').value
   };
 
-  const message = document.getElementById('message');
+  const messageEl = document.getElementById('message');
 
   try {
     const res = await fetch('/users', {
@@ -157,13 +158,17 @@ document.getElementById('form').addEventListener('submit', async e => {
     });
 
     const data = await res.json();
-    message.innerText = data.message || 'Succès';
-
-    if (res.ok) document.getElementById('form').reset();
-
+    if (res.ok) {
+      messageEl.style.color = 'green';
+      messageEl.innerText = data.message + ' | Code: ' + data.code;
+      document.getElementById('form').reset();
+    } else {
+      messageEl.style.color = 'red';
+      messageEl.innerText = data.message || 'Erreur serveur';
+    }
   } catch (err) {
-    console.error(err);
-    message.innerText = 'Erreur serveur';
+    messageEl.style.color = 'red';
+    messageEl.innerText = 'Erreur serveur';
   }
 });
 </script>
